Fix image flicker on artist hover

--- a/src/components/Artist/Artist.css
+++ b/src/components/Artist/Artist.css
@@ -33,4 +33,5 @@
 
 .Artist--number {
     margin: 0 20px;
+    width: 15px;
 }
